--- a/client/src/insex.css
+++ b/client/src/insex.css
@@ -17,7 +17,51 @@ height: 100%;
 grid-template-rows: 50px 1fr 50px;
 }
 
-
 main{
     grid-area: main;
 }
+main .wrapper{
+    display: flex;
+    justify-content: space-between;
+    padding: 30PX;
+}
+
+main .wrapper .products-wrapper{
+    display: flex;
+    justify-content: space-between;
+    border: 3px solid rgb(202, 219, 50);
+    width: 65%;
+
+}
+main .wrapper .products-wrapper .product-item{
+    width:23%;
+}
+main .wrapper .products-wrapper .product-item img{
+    width: 100% ;
+    height: 150px;
+    padding: 2px;
+    border: 1px solid rgb(244, 243, 247)
+}
+main .wrapper .products-wrapper .product-desc{
+   display: flex; 
+   justify-content: space-between;
+   align-items: center;
+   margin: 20px 0;
+
+}
+
+main .wrapper .products-wrapper button{
+    display: block;
+    width: 100%;
+    border: 0;
+    background-color: rgb(82, 82, 214);
+    color: aliceblue;
+    padding: 7px;
+    border-radius: 6px;
+}
+
+main .wrapper .wrapper-filter{
+    border: 3px solid rgb(21, 213, 95);    
+    width: 30%;
+    }
+    
