--- a/client/src/insex.css
+++ b/client/src/insex.css
@@ -59,11 +59,6 @@ main .wrapper .products-wrapper button{
     padding: 7px;
     border-radius: 6px;
 }
-
-main .wrapper .wrapper-filter{
-    border: 3px solid rgb(21, 213, 95);    
-    width: 30%;
-    }
     
 .product-info img{
     display: block;
@@ -83,3 +78,21 @@ main .wrapper .wrapper-filter{
     cursor: pointer;
     font-size: 20px;
 }
+main .wrapper .wrapper-filter{
+    border: 1px solid rgb(199, 244, 216);    
+    background-color: aliceblue;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    }
+    div {
+        padding: 5px 20px;
+        margin-bottom: 13px;
+    }
+    select{
+        display: block;
+        height: 40px;
+        width: 100%;
+        border: 1px solid rgb(181, 172, 172);
+        border-radius: 5px;
+    }
