cart comp logic

--- a/client/src/insex.css
+++ b/client/src/insex.css
@@ -96,3 +96,40 @@ main .wrapper .wrapper-filter{
         border: 1px solid rgb(181, 172, 172);
         border-radius: 5px;
     }
+
+    .cart-wrapper{
+        width: 70%;
+        margin: 20px auto;
+    }
+    .cart-title{
+        padding-bottom: 5px;
+        border-bottom: 1px solid #333;
+       }
+       .cart-item{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        box-shadow: 2px 2px 3px #c0c0c0;
+        margin: 6px 0;
+       }
+
+       .cart-item img{
+        width: 90px;
+        margin-right: 10px;
+       }
+       .cart-item button{
+    display:inline-block; /*خليها البوكس على كد النص المكتوب الي بداخلة */
+    border: 0;
+    background-color: rgb(82, 82, 214);
+    color: aliceblue;
+    padding: 7px;
+    border-radius: 6px;
+       }
+
+       .cart-info{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex: 1;
+       }
