--- a/client/src/insex.css
+++ b/client/src/insex.css
@@ -118,7 +118,7 @@ main .wrapper .wrapper-filter{
         width: 90px;
         margin-right: 10px;
        }
-       .cart-item button{
+    .cart-item button ,.cart-footer button{
     display:inline-block; /*خليها البوكس على كد النص المكتوب الي بداخلة */
     border: 0;
     background-color: rgb(82, 82, 214);
@@ -132,4 +132,53 @@ main .wrapper .wrapper-filter{
         justify-content: space-between;
         align-items: center;
         flex: 1;
+       }
+       .cart-footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px 0;
+       }
+
+       .total-cart-footer{
+          font-size: 25px;
+       }
+       .checkout-form{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 30px;
+        background-color: #ddd;
+        form{
+            width: 60%;
+            margin: auto;
+            div{
+                display: flex;
+                flex-direction: column;
+                padding: 10px;
+                input{
+                    height: 40px;
+                    border: 1px solid #c0c0c0;
+                    
+                }
+                button{
+                        display:inline-block;
+                        height: 40px;
+                        cursor: pointer;
+                        border: 0;
+                        background-color: rgb(82, 82, 214);
+                        color: aliceblue;
+                        padding: 7px;
+                        border-radius: 6px;
+                    }
+            }
+        }
+        span{
+            position: absolute;
+            right:10px;
+            top: 10px;
+            font-size: 20px;
+            cursor: pointer;
+        }
        }
