--- a/client/src/insex.css
+++ b/client/src/insex.css
@@ -182,3 +182,44 @@ main .wrapper .wrapper-filter{
             cursor: pointer;
         }
        }
+
+       /* checkout table */
+       .order-info{
+        display:flex;
+        flex-direction: column;
+        height: 100%;
+        text-transform: capitalize;
+        .close-modal-checkout{
+             position:absolute;
+             right:10px;
+             top:10px;
+             cursor: pointer;
+             font-size: 20px;
+        }
+       }
+       .order-info table{
+            border: 1px solid #c0c0c0;
+       }
+            .order-info table tr{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid #c0c0c0;
+                 &:last-of-type{
+                    border-bottom: 0;
+                }
+                td{
+                    padding: 10px;
+                }
+            }
+             .order-info .alert-success{
+                background-color: green;
+                color: aliceblue;
+                padding: 10px;
+                text-align: center;
+                margin-bottom: 20px;
+             }
+
+         
+
+       
